<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lexlutii.chip8emu_android.MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button0"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button10" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/_5"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/_6"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/_8"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/_9"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/button11"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/b"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button12"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toTopOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/d"
        app:layout_constraintStart_toStartOf="@+id/button14"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button14"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:text="@string/e"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button15"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="51dp"
        android:layout_marginBottom="40dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/openFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/openfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>